[package]
name = "pallet-fund-admin"
description = "Proxy Financial Pallet"
version = "4.0.0-dev"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4"
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = [
	"derive",
] }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.3.0-rc1" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.3.0-rc1" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.3.0-rc1", optional = true }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.3.0-rc1" }
pallet-timestamp = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.3.0-rc1" }
pallet-rbac = { default-features = false, version = "4.0.0-dev", path = "../rbac/" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1", default-features = false }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.3.0-rc1" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.3.0-rc1" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-timestamp/std",
	"pallet-rbac/std",
	"pallet-balances/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
